updated css with hubspot css

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,27 @@
+
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap");
+/* @import url("https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css"); */
 
-/* global */
+/***********************************************/
+/* CSS @imports must be at the top of the file */
+/* Add them above this section                 */
+/***********************************************/
 
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+/****************************************/
+/* HubSpot Style Boilerplate            */
+/****************************************/
+
+/* These includes are optional, but helpful. */
+/* {% include "hubspot/styles/responsive/modules.css" %}
+{% include "hubspot/styles/patches/recommended.css" %} */
+
+
+/*****************************************/
+/* Start your style declarations here    */
+/*****************************************/
+*, *:before, *:after { -webkit-box-sizing: border-box; box-sizing: border-box;
 }
+
 
 html {
   font-family: sans-serif;
@@ -24,6 +38,7 @@ body {
   text-align: left;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 [tabindex="-1"]:focus {
@@ -37,8 +52,12 @@ body {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  float: none!important;
 }
 
+.row-fluid .container [class*="span"]{
+  float:none;
+}
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
@@ -63,13 +82,15 @@ body {
   }
 }
 
-.container-fluid {
+
+.cont-fluid {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
+
 
 .row {
   display: -ms-flexbox;
@@ -178,6 +199,7 @@ body {
   cursor: pointer;
   display: inline-block;
   -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 
@@ -283,13 +305,8 @@ p {
   right: 0;
   bottom: 0;
   z-index: 1;
-  background: -webkit-gradient(
-    linear,
-    right top,
-    left top,
-    color-stop(7%, rgba(0, 189, 77, 0.62)),
-    color-stop(94%, #25274d)
-  );
+  background: -webkit-gradient(linear, right top, left top, color-stop(7%, rgba(0, 189, 77, 0.62)), color-stop(94%, #25274d));
+  background: -o-linear-gradient(right, rgba(0, 189, 77, 0.62) 7%, #25274d 94%);
   background: linear-gradient(270deg, rgba(0, 189, 77, 0.62) 7%, #25274d 94%);
 }
 
@@ -307,7 +324,7 @@ section img.mbm-img {
   mix-blend-mode: overlay;
 }
 
-section .content {
+.code-bg .content {
   position: relative;
   z-index: 2;
   max-width: 25rem;
@@ -381,7 +398,8 @@ section .content {
   width: 100%;
   padding: 0 15px;
   -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+      transform: translateX(-50%);
 }
 
 .banner-text img {
@@ -405,7 +423,8 @@ section .content {
   position: absolute;
   left: 25%;
   -webkit-transform: translateX(-25%);
-  transform: translateX(-25%);
+  -ms-transform: translateX(-25%);
+      transform: translateX(-25%);
   bottom: 0;
   min-width: 45%;
   max-width: 100%;
@@ -474,13 +493,15 @@ section .content {
 .circles-img .col-8 img {
   border-radius: 50%;
   -webkit-transition: all 0.1s ease;
+  -o-transition: all 0.1s ease;
   transition: all 0.1s ease;
   cursor: pointer;
 }
 .circles-img .col-8 img:hover {
   background-color: #fff;
   -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+  -ms-transform: scale(1.05);
+      transform: scale(1.05);
 }
 /* features-section */
 .features-sec .col-6 {
@@ -497,7 +518,7 @@ section .content {
   padding: 15px;
 }
 .featues-content {
-  border-left: 1px solid green;
+  border-left: 1px solid #00bd4d;
   max-width: 21rem;
   padding-left: 2rem;
   color: #fff;
@@ -510,6 +531,7 @@ section .content {
 /* contact-section */
 .contact-section {
   padding: 8rem 0;
+  background-blend-mode: overlay;
 }
 
 .contact-section .text-center {
@@ -540,7 +562,8 @@ section .content {
 }
 
 .footer-top-content,
-.footer-bottom-content {
+.footer-bottom-content,
+.footer-bottom-content .row-number-5.row-fluid-wrapper >.row-fluid{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -551,6 +574,15 @@ section .content {
   justify-content: space-between;
 }
 
+.footer-bottom-content .row-number-5.row-fluid-wrapper >.row-fluid .social-icons{
+  margin-left: -15px;
+}
+
+.footer-bottom-content .row-number-5.row-fluid-wrapper >.row-fluid .copyright{
+  margin-right: -15px;
+  text-align:right;
+}
+
 .footer-top-content .content {
   max-width: 20rem;
 }
@@ -558,7 +590,9 @@ section .content {
 .footer-top-content img {
   display: inline-block;
   margin-right: 1.25rem;
+  vertical-align:baseline;
 }
+
 
 .footer-top-content .ted-section p {
   color: #00bd4d;
@@ -689,6 +723,133 @@ section .content {
   max-width: 100%;
 }
 
+
+/* header css */
+.row-fluid .top {
+    padding: 20px 0 50px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  z-index: 1000;
+}
+.header-container-wrapper .row-fluid [class*="span"] {
+    min-height: 0;
+}
+
+.row-fluid .top > div {
+    position: relative;
+    z-index: 1000;
+}
+
+.top .page-center {
+    margin: 0 auto !important;
+    max-width: 1170px;
+    width: 100%;
+    float: none !important;
+    padding: 0 15px;
+}
+
+.row-fluid .mainmenu {
+    float: right;
+    width: auto;
+    margin: 0;
+    margin-top: 6px;
+}
+.row-fluid .logo img {
+    width: 130px !important;
+    height: 60px;
+}
+.row-fluid .logo img {
+    max-width: 165px;
+}
+
+.hs-menu-wrapper ul {
+    padding: 0;
+}
+.hs-menu-wrapper.hs-menu-flow-horizontal ul {
+    list-style: none;
+    margin: 0;
+}
+
+.row-fluid .mainmenu .hs-menu-wrapper > ul {
+    vertical-align: top;
+}
+
+.hs-menu-wrapper.hs-menu-flow-horizontal ul {
+    list-style: none;
+    margin: 0;
+}
+
+.row-fluid-wrapper:last-child .hs-menu-wrapper.hs-menu-flow-horizontal > ul {
+    margin-bottom: 0;
+}
+
+.hs-menu-wrapper.hs-menu-flow-horizontal > ul li.hs-menu-depth-1 {
+    float: left;
+}
+
+.hs-menu-wrapper.hs-menu-flow-horizontal > ul li a {
+    display: inline-block;
+    padding: 10px 20px;
+    white-space: nowrap;
+    max-width: 140px;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
+    text-decoration: none;
+}
+
+.row-fluid .mainmenu .hs-menu-wrapper > ul > li > a:link, .row-fluid .mainmenu .hs-menu-wrapper > ul > li > a:visited, .row-fluid .mainmenu .hs-menu-wrapper ul li a {
+    padding: 10px 20px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #fff;
+    vertical-align: top;
+    font-family: 'Poppins', sans-serif;
+}
+
+.hs-menu-wrapper.hs-menu-flow-horizontal > ul:after {
+    content: " ";
+    display: table;
+    clear: both;
+}
+
+.row-fluid .mainmenu .hs-menu-wrapper.hs-menu-flow-horizontal > ul li.hs-menu-depth-1:last-child a {
+    border-radius:2rem;
+    border: 2px solid #00bd4d;
+  -webkit-transition:background-color 0.2s ease;
+  -o-transition:background-color 0.2s ease;
+  transition:background-color 0.2s ease;
+}
+.row-fluid .mainmenu .hs-menu-wrapper.hs-menu-flow-horizontal > ul li.hs-menu-depth-1:last-child a:hover {
+    background-color: #00bd4d;
+}
+
+@media (min-width: 768px){
+  a.mobile-trigger, a.child-trigger {
+      display: none !important;
+  }
+
+  .row-fluid .mainmenu .hs-menu-wrapper {
+    display: block !important;
+  }
+
+  .row-fluid .top.fixed {
+    padding: 10px 25px;
+    position: fixed;
+    left: 0;
+    border-bottom: none;
+    top: 0;
+    background: rgba(5,26,73,0.99);
+    -webkit-box-shadow: 0 0 2px 2px rgba(000,000,000,0.1);
+    -o-box-shadow: 0 0 2px 2px rgba(000,000,000,0.1);
+    -ms-box-shadow: 0 0 2px 2px rgba(000,000,000,0.1);
+    box-shadow: 0 0 2px 2px rgba(000,000,000,0.1);
+    z-index: 999;
+}
+}
 /* =======media Queries ======== */
 
 @media (max-width: 1199px) {
@@ -742,6 +903,10 @@ section .content {
   .modal-content {
     padding: 2rem 2rem;
   }
+
+  .row-fluid .mainmenu .hs-menu-wrapper>ul>li>a:link, .row-fluid .mainmenu .hs-menu-wrapper>ul>li>a:visited, .row-fluid .mainmenu .hs-menu-wrapper ul li a{
+      padding: 10px 14px;}
+
 }
 @media (max-width: 767px) {
   html,
@@ -814,7 +979,7 @@ section .content {
 
   .banner .big-btn {
     font-size: 1.5rem;
-    padding: 0.25rem 2rem;
+    padding: 0.5rem 2rem;
     line-height: 1.3;
   }
 
@@ -840,7 +1005,9 @@ section .content {
   }
 
   .features-sec .col-6:nth-of-type(3) {
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 
   .section-padding.cloud-section {
@@ -867,11 +1034,121 @@ section .content {
   .modal-content h2 {
     margin-bottom: 1.5rem;
   }
+
+/*  navbar responsive   */
+  a.mobile-trigger {
+    display: inline-block !important;
+    cursor: pointer;
+    position: absolute;
+    top: 17px;
+    right: 17px;
+    float: none;
+    left: auto;
+    width: auto;
+    height: auto;
+    padding: 0;
+    background: transparent;
+    z-index: 99999999999;
+    -webkit-transition: background-color 0.2s linear;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: left;
+    text-transform: uppercase;
+    border-radius: 6px;
+    text-decoration: none;
+    -webkit-transition: color .2s ease-in;
+    -o-transition: color .2s ease-in;
+    transition: color .2s ease-in;
+}
+  a.mobile-trigger i:before, a.mobile-trigger i:after {
+    position: absolute;
+    content: '';
+}
+  a.mobile-trigger i, a.mobile-trigger i:before, a.mobile-trigger i:after {
+    width: 20px;
+    height: 3px;
+    background-color: #fff;
+    display: inline-block;
+    }
+
+  a.mobile-trigger i:before {
+    margin-top: -8px;
+    width: 24px;
+}
+  a.mobile-trigger i:after {
+    margin-top: 8px;
+    width: 24px;
+}
+  .mainmenu.js-enabled .hs-menu-flow-horizontal {
+    position: fixed;
+    top: 90px;
+    left: 0px;
+    width: 100%;
+    bottom: 0;
+    height: 250px;
+/*     overflow-y: auto !important; */
+  }
+  .mainmenu.js-enabled .hs-menu-flow-horizontal, .mainmenu.js-enabled .hs-menu-children-wrapper {
+    display: none;
+}
+  .header-container .row-fluid-wrapper:last-child .hs-menu-wrapper.hs-menu-flow-horizontal>ul {
+    background: rgba(0,0,0,0.99);
+   }
+  .mainmenu, .mainmenu * {
+    display: block;
+    float: none;
+    position: static;
+    top: auto;
+    right: auto;
+    left: auto;
+    bottom: auto;
+    padding: 0px;
+    margin: 0px;
+    background-image: none;
+    background-color: transparent;
+    border: 0px;
+    border-radius: 0px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    max-width: none;
+    width: 100%;
+    height: auto;
+    line-height: 1;
+    font-weight: normal;
+    text-decoration: none;
+    text-indent: 0px;
 }
 
-@media (max-width: 575px) {
-  .footer-top-content,
-  .footer-bottom-content {
+  .row-fluid .top{
+    position: fixed;
+    padding: 20px 0 10px;
+  }
+
+   .row-fluid .top.fixed{
+    background:rgba(0,0,0,0.99);
+  }
+  .hs-menu-wrapper.hs-menu-flow-horizontal > ul li.hs-menu-depth-1 {
+    float: none;
+}
+
+  .hs-menu-wrapper.hs-menu-flow-horizontal > ul li a, .hs-menu-wrapper.hs-menu-flow-horizontal > ul li.hs-item-has-children ul.hs-menu-children-wrapper li a, .hs-menu-wrapper.hs-menu-flow-horizontal.hs-menu-show-active-branch > ul li.hs-item-has-children.active-branch > ul.hs-menu-children-wrapper > li a {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+}
+
+  .row-fluid .mainmenu .hs-menu-wrapper.hs-menu-flow-horizontal>ul li.hs-menu-depth-1:last-child a,
+  .row-fluid .mainmenu .hs-menu-wrapper.hs-menu-flow-horizontal>ul li.hs-menu-depth-1:last-child a:hover{
+    border: none;
+    background-color:transparent;
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+}
+
+  .row-fluid .mainmenu .hs-menu-wrapper>ul>li>a:link{ text-align:center;}
+
+  .footer-bottom-content .row-number-5.row-fluid-wrapper >.row-fluid{
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     -webkit-box-pack: center;
@@ -879,6 +1156,29 @@ section .content {
     justify-content: center;
     text-align: center;
   }
+
+    .footer-bottom-content .row-number-5.row-fluid-wrapper >.row-fluid .social-icons,
+  .footer-bottom-content .row-number-5.row-fluid-wrapper >.row-fluid .copyright{
+  text-align:center;
+    margin-left:0;
+    margin-right:0;
+    width:100%;
+  }
+
+}
+
+@media (max-width: 575px) {
+  .footer-top-content,
+  .footer-bottom-content,
+  .footer-bottom-content .row-number-5.row-fluid-wrapper >.row-fluid{
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    text-align: center;
+  }
+
 
   .banner-text img {
     margin-bottom: 0.5rem;
